# cash-flow-planner

./: .pre-commit-config.yaml  Dockerfile  main.py  pylintrc  pyproject.toml  pytest.ini
flow_prediction/aggregates/: __init__.py  base.py
flow_prediction/aggregates/cashflow/: __init__.py
flow_prediction/aggregates/cashflow/allocation/: __init__.py
flow_prediction/aggregates/corpus/: __init__.py
flow_prediction/aggregates/corpus/lease/: __init__.py
flow_prediction/aggregates/expense/: __init__.py
flow_prediction/aggregates/expense/test/: test_expense.py
flow_prediction/app/: __main__.py  data.py
flow_prediction/app/use_cases/: __init__.py
flow_prediction/app/use_cases/simulation/: __init__.py  init_data.py
flow_prediction/app/use_cases/simulation/samples/: __init__.py  bachelor_for_life.py  backup.py
flow_prediction/app/use_cases/simulation/samples/amol_sample_data/: __init__.py
flow_prediction/app/use_cases/simulation/samples/helpers/: __init__.py
flow_prediction/app/use_cases/simulation/samples/vaibhav_sample_data/: __init__.py
flow_prediction/services/simulation/: __init__.py  init_data.py
flow_prediction/shared/value_objects/: __init__.py
flow_prediction/shared/value_objects/decimal/: __init__.py
flow_prediction/shared/value_objects/id/: __init__.py
flow_prediction/shared/value_objects/inflation_adjustable_value/: __init__.py
flow_prediction/shared/value_objects/money/: __init__.py
